[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bosses/BaseBoss/BaseBoss.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Weapons/BasicWeapon/BasicWeapon.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "HurtFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "HurtFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon1Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "HurtFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon2Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 32.0

[sub_resource type="Animation" id=6]
length = 0.1

[node name="BaseBoss" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="MainSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="WeakSpot" type="Area2D" parent="." groups=[
"Enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeakSpot"]

[node name="Sprite" type="Sprite" parent="WeakSpot"]
position = Vector2( 9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.3125, 0.15625 )
texture = ExtResource( 2 )

[node name="WeakSpotHurtAnimationPlayer" type="AnimationPlayer" parent="WeakSpot"]
anims/HurtFlash = SubResource( 1 )

[node name="Weapon1Timer" type="Timer" parent="."]

[node name="Weapon2Timer" type="Timer" parent="."]

[node name="Weapon1Area" type="Area2D" parent="." groups=[
"Enemy",
]]
position = Vector2( -17.294, -28.116 )

[node name="Weapon1" parent="Weapon1Area" instance=ExtResource( 3 )]
is_player = false

[node name="Weapon1Sprite" type="Sprite" parent="Weapon1Area"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon1Area"]
shape = SubResource( 2 )

[node name="Weapon1AnimationPlayer" type="AnimationPlayer" parent="Weapon1Area"]

[node name="Weapon1HurtAnimationPlayer" type="AnimationPlayer" parent="Weapon1Area"]
anims/HurtFlash = SubResource( 3 )

[node name="Weapon2Area" type="Area2D" parent="." groups=[
"Enemy",
]]
position = Vector2( -17.294, 28.116 )

[node name="Weapon2" parent="Weapon2Area" instance=ExtResource( 3 )]
is_player = false

[node name="Weapon2Sprite" type="Sprite" parent="Weapon2Area"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon2Area"]
shape = SubResource( 2 )

[node name="Weapon2AnimationPlayer" type="AnimationPlayer" parent="Weapon2Area"]

[node name="Weapon2HurtAnimationPlayer" type="AnimationPlayer" parent="Weapon2Area"]
anims/HurtFlash = SubResource( 4 )

[node name="BarrierArea" type="Area2D" parent="." groups=[
"Enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrierArea"]
position = Vector2( 16, 0 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="BarrierHurtAnimationPlayer" type="AnimationPlayer" parent="BarrierArea"]
anims/HurtFlash = SubResource( 6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 11.9693, 0 )
emitting = false
local_coords = false
emission_shape = 1
emission_sphere_radius = 40.0
gravity = Vector2( 0, 0 )
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 1, 0.305882, 0, 1 )
hue_variation = 0.15
hue_variation_random = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="WeakSpot" to="." method="_on_WeakSpot_area_entered"]
[connection signal="area_entered" from="Weapon1Area" to="." method="_on_Weapon1Area_area_entered"]
[connection signal="area_entered" from="Weapon2Area" to="." method="_on_Weapon2Area_area_entered"]
